# NanoTask

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  NanoTaskConfig.cmake.in  README.md  VeloTaskConfig.cmake.in
.github/workflows/: ci.yaml  cmake-multi-platform.yaml
cmake/: TaskFlowConfig.cmake.in
examples/: basic_task_submission.cpp  main.cpp  multiple_tasks.cpp  persistent_task.cpp  task_types.hpp  task_with_failure.cpp  task_with_progress.cpp  task_with_result.cpp
include/nanotask/: task_base.hpp  task_manager.hpp  taskpool.hpp  threadpool.hpp
include/taskflow/: any_task.hpp  state_storage.hpp  task_ctx.hpp  task_manager.hpp  task_traits.hpp  threadpool.hpp
include/velotask/: taskbase.hpp  taskmanager.hpp  taskpool.hpp
